<resources>

    <string name="app_name">Wildcats TimeWise</string>
    <string name="login_subtitle">Login to your account</string>

    <string name="forgot_password">Forgotten Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>

    <string name="back_button_text">Back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>

    <string name="login_title">Login to your account</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="no_account">Don’t have an account?</string>

    //register
    <string name="app_logo">App Logo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email address</string>
    <string name="date_of_birth">Date of Birth (dd / mm / yy)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">I already have an account</string>

    <!-- Dashboard -->
    <string name="welcome_message">Hello and Welcome, %s!</string>
    <string name="select_date">Select a Date</string>

    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_student_c">Student C</string>

    <!-- App Name -->

    <!-- Student C Page -->
    <string name="total_events">Total Events</string>
    <string name="time">Time</string>
    <string name="date_today">Date Today</string>
    <string name="all_events">All Events</string>
    <string name="dashboard">Dashboard</string>

    <!-- Event Labels -->
    <string name="january_event">January</string>
    <string name="february_event">February</string>
    <string name="march_event">March</string>
    <string name="april_event">April</string>
    <string name="may_event">May</string>
    <string name="june_event">June</string>
    <string name="july_event">July</string>
    <string name="august_event">August</string>
    <string name="september_event">September</string>
    <string name="october_event">October</string>
    <string name="november_event">November</string>
    <string name="december_event">December</string>
    <string name="enter_new_event">Enter new event</string>
    <string name="add_event">Add Event</string>
    <string name="special_character">--:--</string>
    <string name="wildcats_event">WildCats Event</string>
    <string name="user_profile">User Profile</string>
    <string name="your_email_example_com">your.email@example.com</string>
    <string name="your_name">Your Name</string>
    <string name="logout">Logout</string>

</resources>