<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#380c0f"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/wt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="406dp"
            android:background="@drawable/custom_button"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_account"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <EditText
                    android:id="@+id/edittext_firstname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/edittext_lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="12dp" />
            </LinearLayout>


            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="12dp" />

            <EditText
                android:id="@+id/edittext_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="birthDateDay"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:minHeight="48dp"
                android:padding="12dp"/>


            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edittext_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#380C0F"
                android:minWidth="200dp"
                android:padding="20dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_have_account"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>